BugFix: Mobile Navbar clipping

--- a/Customer/rideList/mobile.css
+++ b/Customer/rideList/mobile.css
@@ -25,6 +25,7 @@
 
     /* Removes border when unexpanded (cleaner) */
     #navbar {
+        height: 100svh;
         border-color: transparent;
         background-color: transparent;
         transition:
